name:                type-level-cpu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eliza0x/type-level-cpu#readme
license:             MIT
license-file:        LICENSE
author:              Sohei Yamaga
maintainer:          me@eliza.link
copyright:           2020 Sohei Yamaga
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable type-level-cpu
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
